# crates/qm-api/src/routes/mod.rs
@@ -1,5 +1,6 @@
 pub mod accounts;
 pub mod health;
+pub mod households;
 pub mod locations;
 pub mod products;
 pub mod stock;
